arreglar orm